--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" type="image/x-icon" href="static/favicon.ico" /> -->
-    <title>Vue demo</title>
+    <title>v2 demo</title>
   </head>
   <body style="height:100%">
     <div id="app"></div>
