--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" type="image/x-icon" href="static/favicon.ico" /> -->
     <meta http-equiv="x-dns-prefetch-control" content="on">
+    <meta name="description" content="this is vue2 demo website.">
     <title>v2 demo</title>
   </head>
   <body style="height:100%">
